# acatome-mcp

./: CHANGELOG.md  README.md  pyproject.toml
src/acatome_mcp/: __init__.py  server.py  tools.py  uri.py
tests/: test_tools.py  test_uri.py
