[project]
name = "acatome-mcp"
version = "0.1.0"
description = "MCP server exposing acatome-store tools"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["mcp", "scientific-papers", "llm", "semantic-search", "notes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/acatome/acatome-mcp"
Repository = "https://github.com/acatome/acatome-mcp"
Issues = "https://github.com/acatome/acatome-mcp/issues"

dependencies = [
    "acatome-store>=0.1.0",
    "mcp>=1.0",
]

[project.scripts]
acatome-mcp = "acatome_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_mcp"]
