[project]
name = "acatome-mcp"
version = "0.2.3"
description = "MCP server exposing acatome-store tools"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{name = "Reto Stamm", email = "reto@retostamm.com"}]
readme = "README.md"
keywords = ["mcp", "scientific-papers", "llm", "semantic-search", "notes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "acatome-store>=0.1.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/acatome/acatome-mcp"
Repository = "https://github.com/acatome/acatome-mcp"
Issues = "https://github.com/acatome/acatome-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "black>=24.0",
    "ruff>=0.5",
]

[project.scripts]
acatome-mcp = "acatome_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.bumpversion]
current_version = "0.2.3"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/acatome_mcp/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
